--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,13 @@
-*{
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
+
+
+/* *{
     font-family: 'Times New Roman', Times, serif;
+    background-color: bisque;
+} */
+
+body {
     background-color: bisque;
 }
 
@@ -107,4 +115,49 @@
     display: flex;
     justify-content: center;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
