feat: service time chart created

--- a/styles.css
+++ b/styles.css
@@ -161,5 +161,6 @@ td {
 
 .charts-container {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
 }
