feat: cards css updated

--- a/styles.css
+++ b/styles.css
@@ -164,3 +164,11 @@ td {
     grid-template-columns: 1fr 1fr;
     gap: 20px;
 }
+
+.cards-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 5px;
+    align-items: stretch;
+}
