feat: cards updated

--- a/styles.css
+++ b/styles.css
@@ -166,9 +166,13 @@ td {
 }
 
 .cards-container {
-    display: grid;
+    display: none;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     gap: 5px;
     align-items: stretch;
+}
+
+.kpi {
+    background-color: #fafafa;
 }
